# website

./: .gitignore  CNAME  README.md  biome.json  justfile  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.workspaces.json
.github/: pull_request_template.md
.github/workflows/: backend-ci.yml  deploy-pages.yml  pr-policy.yml
.husky/: pre-push
apps/web/: index.html  vite.config.ts
apps/web/public/docs/: backend-api-demo-guide.md
apps/web/src/__tests__/: content.test.ts  paths.test.ts
apps/web/src/app/: paths.ts  router.ts
apps/web/src/components/: news-item.ts  property-table.ts  site-header.ts
apps/web/src/routes/: about.route.ts  (+7 more)
apps/web/tests/: home.spec.ts
backend/: README.md  pyproject.toml
backend/src/amdb/: __init__.py  config.py  main.py
backend/src/amdb/api/: routes_extraction.py  routes_pipeline.py  routes_sanitizer.py  routes_statistics.py
backend/src/amdb/cli/: pipeline.py  run_def.py  sanitize.py  statistics.py
backend/src/amdb/core/: errors.py  logging.py  paths.py
backend/src/amdb/schemas/: extraction.py  pipeline.py  sanitizer.py  statistics.py
backend/src/amdb/services/: artifacts.py  def_runner.py  ingestion.py  mapping_pipeline.py  ontology.py  prediction.py  sanitizer.py  statistics.py  wikidata.py
backend/tests/: test_def_runner.py  test_ingestion.py  test_mapping_pipeline.py  test_ontology.py  test_prediction.py  test_sanitizer.py  test_statistics.py
backend/tests/fixtures/: sample_raw.xml
extraction/config/: extraction.am.properties
extraction/scripts/: run_def.sh  run_statistics.sh  week2_pipeline.sh
(+5 files in other folders)
