[project]
name = "amdb-backend"
version = "0.1.0"
description = "FastAPI backend for Amharic DBpedia dump sanitization and DEF verification."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiofiles>=24.1.0",
  "beautifulsoup4>=4.12.3",
  "fastapi>=0.115.6",
  "lxml>=5.3.0",
  "pydantic>=2.10.4",
  "pydantic-settings>=2.7.0",
  "python-multipart>=0.0.20",
  "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
  "httpx2>=2.2.0",
  "mypy>=1.14.1",
  "pytest>=8.3.4",
  "pytest-asyncio>=0.25.2",
  "ruff>=0.9.2",
]

[project.scripts]
amdb-sanitize = "amdb.cli.sanitize:main"
amdb-run-def = "amdb.cli.run_def:main"
amdb-pipeline = "amdb.cli.pipeline:main"
amdb-statistics = "amdb.cli.statistics:main"

[project.optional-dependencies]
pipeline = [
  "mwparserfromhell>=0.6.6",
  "sentence-transformers>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/amdb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
packages = ["amdb"]
